@@ -93,7 +93,11 @@ class MenuNodeAPITestCase extends DrupalWebTestCase {
     }
     $result = $query->execute();
     foreach ($result as $data) {
-      node_delete($data->nid);
+      // Ensure we have a fresh copy of the node.
+      // In normal, form-based Drupal, the cache clear handles this, but SimpleTest
+      // runs our functions on a single callback.
+      $node = node_load($data->nid, NULL, TRUE);
+      node_delete($node->nid);
     }
   }
 
